
Changes in Version 0.6-12

 o the 'style' argument to layer() now applies to the "superpose" styles
   also, which fixes some cases with xyplot.ts.

 o the 'zoo' methods for panel.xblocks() and panel.xyarea() now use 
   coredata() rather than as.vector(), so can keep factors intact.

Changes in Version 0.6-10

 o support arrows with panel.segplot.

 o several changes to panel.xblocks().

 o layer() now has a 'magicdots' argument, which is TRUE by default.

 o use of the 'eval' and 'etc' arguments to layer() are now deprecated.

 o new function simpleSmoothTs (calculations as in panel.tskernel).

 o panel.tskernel() gains a new argument 'n' (default 300) to reduce the
   number of plotted points.

 o panel.qqmath.tails() is now deprecated as its main functionality
   has been moved into panel.qqmath() (in lattice 0.18-4, from R 2.11.0).

 o glayer() was failing on plots with an existing 'panel.groups'.

 o panel.smoother() now omits non-finite values and converts to numeric.

 o panel.xyarea() (and thus horizonplot()) now handles missing values.

Changes in Version 0.6-6

 o xyplot.ts actually removed now (forgot to delete it after lattice release).
 
 o new function horizonplot().

 o fixed rescaling bug in panel.tskernel(..., sides = 1).

 o mapplot can now take colramp = NULL to use the current theme.

Changes in Version 0.6-5

 o new panel functions panel.smoother() and panel.quantile().
   The latter requires the quantreg package.

 o new panel function panel.tskernel().

 o layer() rewritten and now has several new arguments.
   New convenience functions layer_(), glayer(), etc.

 o new functions theEconomist.theme() and asTheEconomist().

 o custom.theme() gains a `...` argument passed to simpleTheme.
   Added a variant custom.theme.2() with different defaults.

 o expanded xyplot.ts() and moved it to the lattice package.

 o improved handling of colours in panel.xblocks().
   Added several more examples to the help page.
